--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "csv-writer": "^1.6.0",
     "express": "^5.2.1",
+    "json2csv": "^6.0.0-alpha.2",
     "qrcode-terminal": "^0.12.0",
+    "uuid": "^13.0.0",
     "whatsapp-web.js": "^1.34.2"
   }
 }
